# otus-cpp-basics_hw-5

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/statistics/: CMakeLists.txt  istatistics.h  max.cpp  max.h  mean.cpp  mean.h  min.cpp  min.h  pst.cpp  pst.h  std.cpp  std.h
tests/: CMakeLists.txt  bug_fix_tests.cpp
